embedded/ROS2_WS_TEST/log/build_2024-09-27_15-13-49/sub2/stderr.log
  File "C:\Users\SSAFY\Desktop\ros2_ws\install\sub2\Lib\site-packages\sub2\load_map.py", line 77
    back_folder='C:\Users\SSAFY\Desktop\ros2_ws\src\sub2'
               ^
SyntaxError: (unicode error) 'unicodeescape' codec can't decode bytes in position 2-3: truncated \UXXXXXXXX escape

